add figures presentation, update colors

--- a/resources.html
+++ b/resources.html
@@ -87,6 +87,8 @@
 									<a href="media/Lectures_NeuralEngineering_student.pdf">Hodgkin & Huxley, Stimulation, and the Cable Equation</a>
 								</br>
 									<a href="media/PersonalStatements.pptx">Writing a Personal Statement</a>
+								</br>
+								<a href="media/2900 Figures Presentation.pptx">Making Good Figures</a>
 									
 									
 								</div>
