update CV and text details

--- a/cv.html
+++ b/cv.html
@@ -55,11 +55,10 @@
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<h3>Selected Honors</h3>
-												<p>I received the NDSEG Fellowship which began the fall of 2019, as well as recognition in the form of
-													Honorable Mention for the NSF GRFP award. I have received several travel awards, including the Ripple Society for Neuroscience
-													Travel award and the Neural Interfaces Conference Diversity Travel award. I have additionally earned the 
-													Society for Pelvic Research Best Presentation and was selected to give a talk as part of a showcase of early stage researchers at 
-													the International Society for Autonomic Neuroscience.</p>
+												<p>I received the NDSEG Fellowship beginning the fall of 2019, as well as recognition in the form of
+													Honorable Mention for the NSF GRFP award. I have received several conference awards, including 
+													Finalist for Best Student Paper at IEEE Engineering in Medicine and Biology 2022 and  
+													Society for Pelvic Research 2018 Best Presentation. Further details about my experience can be found at the CV link below. </p>
 												<ul class="actions">
 													<li><a href="media/Jantz_CV.pdf" class="button icon solid fa-download">Download CV</a></li>
 												</ul>
@@ -75,6 +74,7 @@
 
 										</div>
 										<h2>In the media</h2>
+										<a href="https://www.youtube.com/watch?v=mU1klurBuag">Nerd Nite Comedy Presentation</a>
 										<a href="https://www.gradstudies.pitt.edu/2022-pitt-3mt-contestants">Winner of 3 Minute Thesis competition</a></br>
 										<a href="https://www.pittwire.pitt.edu/news/hill-district-cec-introduces-digital-inclusion-efforts-pittsburgh">Python and Music Outreach</a></br>
 										<a href="https://www.engineering.pitt.edu/News/2019/Jantz-NDSEG/">NDSEG award recognition</a></br>
