--- a/science.html
+++ b/science.html
@@ -93,7 +93,7 @@
 
 											</p>
 											<ul class="actions">
-												<li><a href="media/Jantz_EMBCfinal.pdf" class="button">Conference Paper</a></li>
+												<li><a href="media/Jantz_EMBCfinal.pdf" class="button">Conference Paper: Simplified Model</a></li>
 		
 											</ul>
 										</div>
@@ -113,7 +113,7 @@
 												we were able to produce activity in the nerves and muscles of the lower urinary tract as well as cause both continence and voiding function.
 											</p>
 											<ul class="actions">
-												<li><a href="https://www.biorxiv.org/content/10.1101/2021.04.30.442206v1" class="button">BioRxiv Paper</a></li>
+												<li><a href="https://www.biorxiv.org/content/10.1101/2021.04.30.442206v1" class="button">BioRxiv Paper: Selectivity</a></li>
 		
 											</ul>
 											<!--<ul class="actions">
