--- a/teaching.html
+++ b/teaching.html
@@ -98,22 +98,9 @@
         a fundraising effort by ceramicists supporting local food banks.
     </p>
     <p>
-        As part of my efforts for inclusion and diversity in lab, I help run a seminar and discussion series covering, 
-        among other things, the following topics: 
-        <ul class="alt">
-        <li>
-            Race
-        </li>
-		<li>
-            Gender & Sexuality in STEM
-        </li>
-        <li>
-            Socioeconomic class
-        </li>
-        <li>
-            Mental Health & Disability
-        </li>
-    </ul>
+        As part of my efforts for inclusion and diversity in lab, I help run a seminar and discussion series covering 
+        race, gender and sexuality in STEM, disability, and other neuroethics topics. 
+
     </p>
 </div>
 							</section>
