--- a/cv.html
+++ b/cv.html
@@ -74,7 +74,7 @@
 
 										</div>
 										<h2>In the media</h2>
-										<a href="https://www.youtube.com/watch?v=mU1klurBuag">Nerd Nite Comedy Presentation</a>
+										<a href="https://www.youtube.com/watch?v=mU1klurBuag">Nerd Nite Comedy Presentation</a></br>
 										<a href="https://www.gradstudies.pitt.edu/2022-pitt-3mt-contestants">Winner of 3 Minute Thesis competition</a></br>
 										<a href="https://www.pittwire.pitt.edu/news/hill-district-cec-introduces-digital-inclusion-efforts-pittsburgh">Python and Music Outreach</a></br>
 										<a href="https://www.engineering.pitt.edu/News/2019/Jantz-NDSEG/">NDSEG award recognition</a></br>
