--- a/science.html
+++ b/science.html
@@ -113,7 +113,7 @@
 												we were able to produce activity in the nerves and muscles of the lower urinary tract as well as cause both continence and voiding function.
 											</p>
 											<ul class="actions">
-												<li><a href="https://www.biorxiv.org/content/10.1101/2021.04.30.442206v1" class="button">BioRxiv Paper: Selectivity</a></li>
+												<li><a href="https://doi.org/10.1088/1741-2552/aca0c2" class="button">Paper: Selectivity</a></li>
 		
 											</ul>
 											<!--<ul class="actions">
