--- a/cv.html
+++ b/cv.html
@@ -60,7 +60,7 @@
 													Finalist for Best Student Paper at IEEE Engineering in Medicine and Biology 2022 and  
 													Society for Pelvic Research 2018 Best Presentation. Further details about my experience can be found at the CV link below. </p>
 												<ul class="actions">
-													<li><a href="media/Jantz_CV.pdf" class="button icon solid fa-download">Download CV</a></li>
+													<li><a href="media/Jantz_CV.pdf?buster=<?= time() ?>" class="button icon solid fa-download">Download CV</a></li>
 												</ul>
 											</div>
 											<div class="col-6 col-12-small">
