--- a/colors.html
+++ b/colors.html
@@ -1,11 +1,24 @@
+<head>
+    <title>Colors</title>
+</head>
+
 <h1>Colorblind-friendly color palette generator</h1>
 <h3>Choose color parameters:</h3>
 <ul>
     <li>Number of colors</li>
     <li>Minimum brightness (0-100, 0=black)</li>
     <li>Maximum brightness (0-100, 100=white)</li>
+    <li>Minimum distance from other colors?</li>
     <li>Deuteranopia</li>
     <li>Protanopia</li>
     <li>Tritanopia</li>
     <li>Reduce grays/browns</li>
 </ul>
+
+<p>Insert here: set of colors across the page (like the Adobe generator thing). Use 
+    any random set, but then also provide below the colors: smaller bar with each of the 
+    colorblindness types, as well as editable RGB, HEX, etc values. 
+    Click on a color to lock it in so it doesn't change when regenerating lists and is 
+    referenced for distances to colors. Also, provide a "simulated plot" option like the one
+    in viz palette. (scroll down to see? Do scatter plot w/overlap and lines.)
+</p>
