--- a/colors.html
+++ b/colors.html
@@ -1,11 +1,13 @@
 <head>
     <title>Colors</title>
     <link rel="stylesheet" href="assets/css/colors.css">
+    <script src="assets/js/colors.js"></script>
 </head>
 
 <h1>Colorblind-friendly color palette generator</h1>
 <h3>Choose color parameters:</h3>
 
+<p id="demo"></p>
 <body>
 <form>
     <label>
