--- a/colors.html
+++ b/colors.html
@@ -4,15 +4,16 @@
     <script src="assets/js/colors.js"></script>
 </head>
 
-<h1>Colorblind-friendly color palette generator</h1>
+<body>
+
+<h1 id="test">Colorblind-friendly color palette generator</h1>
 <h3>Choose color parameters:</h3>
 
-<p id="demo"></p>
-<body>
+
 <form>
     <label>
         <span>Number of colors</span>
-        <input type="number" value=3 min=2 max="12">
+        <input type="number" value=4 min=2 max="12">
     </label>
     <label>
         <span>Minimum brightness (0-100, 0=black)</span>
