--- a/colors.html
+++ b/colors.html
@@ -9,6 +9,9 @@
 <h1 id="test">Colorblind-friendly color palette generator</h1>
 <h3>Choose color parameters:</h3>
 
+<script>
+    document.getElementById("test").innerHTML = 20;
+</script>
 
 <form>
     <label>
