--- a/colors.html
+++ b/colors.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<html>
 <head>
     <title>Colors</title>
     <link rel="stylesheet" href="assets/css/colors.css">
@@ -16,7 +18,7 @@
 <form>
     <label>
         <span>Number of colors</span>
-        <input type="number" value=4 min=2 max="12">
+        <input type="number" value=3 min=2 max="12">
     </label>
     <label>
         <span>Minimum brightness (0-100, 0=black)</span>
@@ -72,3 +74,4 @@
 </div>
 
 </body>
+</html>
