test align divs

--- a/colors.html
+++ b/colors.html
@@ -59,16 +59,16 @@
 
     <div id="target"></div>
 
-    <div class="column-4 project-1">
+    <div class="columns project-1">
     </div>
 
-    <div class="column-4 project-2">
+    <div class="columns project-2">
     </div>
 
-    <div class="column-4 project-3">
+    <div class="columns project-3">
     </div>
 
-    <div class="column-4 project-4">
+    <div class="columns project-4">
     </div>
 
 
