--- a/colors.html
+++ b/colors.html
@@ -13,7 +13,7 @@
     <form>
         <label>
             <span>Number of colors</span>
-            <input id='num_clrs' type="number" value=3 min=2 max="12">
+            <input id='num_clrs' type="number" value=4 min=2 max="12">
         </label>
         <label>
             <span>Minimum brightness (0-100, 0=black)</span>
@@ -41,7 +41,7 @@
         </label>
         <label>
             <span>Reduce grays/browns</span>
-            <input type="checkbox" checked>
+            <input type="checkbox">
         </label>
     </form>
 
