--- a/colors.html
+++ b/colors.html
@@ -25,23 +25,23 @@
         </label>
         <label>
             <span>Minimum distance from other colors</span>
-            <input type="number" value=5 min=2 max="12">
+            <input idx='min_dist' type="number" value=5 min=2 max="12">
         </label>
         <label>
             <span>Deuteranopia</span>
-            <input type="checkbox" checked>
+            <input id='deut_check' type="checkbox" checked>
         </label>
         <label>
             <span>Protanopia</span>
-            <input type="checkbox" checked>
+            <input id='prot_check' type="checkbox" checked>
         </label>
         <label>
             <span>Tritanopia</span>
-            <input type="checkbox" checked>
+            <input id='trit_check' type="checkbox" checked>
         </label>
         <label>
             <span>Reduce grays/browns</span>
-            <input type="checkbox">
+            <input id='gb_check' type="checkbox">
         </label>
     </form>
 
