--- a/colors.html
+++ b/colors.html
@@ -45,7 +45,7 @@
         </label>
     </form>
 
-    <button>Generate colors</button>
+    <button type="button" onclick="updateColors()">Generate colors</button>
     <button>Clear locked colors</button>
     <button type="button" onclick="restoreDefaultValues()">Restore default values</button>
 
