--- a/colors.html
+++ b/colors.html
@@ -25,7 +25,7 @@
         </label>
         <label>
             <span>Minimum distance from other colors</span>
-            <input idx='min_dist' type="number" value=5 min=2 max="12">
+            <input id='min_dist' type="number" value=5 min=2 max="12">
         </label>
         <label>
             <span>Deuteranopia</span>
