--- a/colors.html
+++ b/colors.html
@@ -43,6 +43,10 @@
             <span>Reduce grays/browns</span>
             <input id='gb_check' type="checkbox">
         </label>
+        <label>
+            <span>test color</span>
+            <input id='test' type="color">
+        </label>
     </form>
 
     <button type="button" onclick="updateColors()">Generate colors</button>
