more grid testing

--- a/colors.html
+++ b/colors.html
@@ -50,7 +50,7 @@
     </form>
 
     <button type="button" onclick="updateColors()">Generate colors</button>
-    <button>Clear locked colors</button>
+    <button type="button" onclick = 'genDivsGrid(4)'>Clear locked colors</button>
     <button type="button" onclick="restoreDefaultValues()">Restore default values</button>
 
     <p>Insert here: set of colors across the page (like the Adobe generator thing). Use
