--- a/colors.html
+++ b/colors.html
@@ -52,11 +52,14 @@
     <button type="button" onclick = 'genDivsGrid(4)'>Clear locked colors</button>
     <button type="button" onclick="restoreDefaultValues()">Restore default values</button>
 
-    <p>Insert here: set of colors across the page (like the Adobe generator thing). Use
-        any random set, but then also provide below the colors: smaller bar with each of the
-        colorblindness types, as well as editable RGB, HEX, etc values.
-        Click on a color to lock it in so it doesn't change when regenerating lists and is
-        referenced for distances to colors. Also, provide a "simulated plot" option like the one
+    <p>Instructions: 
+        This tool generates a random set of colors and displays a selection of them that are
+        most distinguishable across multiple different types of color vision. Each column displays a color for several
+        types of color vision. To select your own colors, use the color selector in the top right of a column, and to 
+        keep a color despite regenerating the rest of the set, check the box at the top of a column to lock it. 
+        editable RGB, HEX, etc values.
+        some potential punny things: RGBetter (lame but catchy), huemongus
+        Also, provide a "simulated plot" option like the one
         in viz palette. (scroll down to see? Do scatter plot w/overlap and lines.)
     </p>
 
