--- a/colors.html
+++ b/colors.html
@@ -49,7 +49,7 @@
     </form>
 
     <button type="button" onclick="updateColors()">Generate colors</button>
-    <button type="button" onclick = 'genDivsGrid(4)'>Clear locked colors</button>
+    <button type="button">Clear locked colors</button>
     <button type="button" onclick="restoreDefaultValues()">Restore default values</button>
 
     <p><b>Instructions:</b> 
@@ -58,7 +58,8 @@
         types of color vision. To select your own colors, use the color selector in the top right of a column, and to 
         keep a color despite regenerating the rest of the set, check the box at the top of a column to lock it. At the 
         bottom of the page are a couple of simulated plots in the color set, as well as the RGB and HEX values.
-        some potential punny things: RGBetter (lame but catchy), huemongus
+        <br/>
+        some potential punny things: RGBetter (lame but catchy), huemongus; 
         provide a "simulated plot" option like the one
         in viz palette. (scroll down to see? Do scatter plot w/overlap and lines.)
     </p>
