--- a/colors.html
+++ b/colors.html
@@ -62,7 +62,7 @@
 
     <button type="button" onclick="updateColors()">Generate colors</button>
     <button type="button" onclick="restoreDefaultValues()">Restore default values</button>
-    <br/>
+    <div class="break"></div>
     <div id="target"></div>
 
     <script src="assets/js/colors.js"></script>
