--- a/colors.html
+++ b/colors.html
@@ -59,7 +59,8 @@
         </label>
         </div>
     </form>
-
+    
+    <div class="break"></div>
     <button type="button" onclick="updateColors()">Generate colors</button>
     <button type="button" onclick="restoreDefaultValues()">Restore default values</button>
     <div class="break"></div>
