first tests of mitchells setup

--- a/colors.html
+++ b/colors.html
@@ -59,10 +59,11 @@
         </label>
         </div>
     </form>
-    
+
     <div class="break"></div>
     <button type="button" onclick="updateColors()">Generate colors</button>
     <button type="button" onclick="restoreDefaultValues()">Restore default values</button>
+    <button type="button" onclick="runMitchell()">Test</button>
     <div class="break"></div>
     <div id="target"></div>
 
