log some candidate generation stuff

--- a/colors.html
+++ b/colors.html
@@ -65,6 +65,8 @@
     <button type="button" onclick="restoreDefaultValues()">Restore default values</button>
     <button type="button" onclick="runMitchell()">Test</button>
     <div class="break"></div>
+    <div class="testing"></div>
+    <div class="break"></div>
     <div id="target"></div>
 
     <script src="assets/js/colors.js"></script>
