--- a/colors.html
+++ b/colors.html
@@ -4,6 +4,7 @@
 <head>
     <title>Colors</title>
     <link rel="stylesheet" href="assets/css/colors.css">
+    <link rel="icon" href="media/color-wheel.png">
 </head>
 
 <body>
