add loop for min brightness

--- a/colors.html
+++ b/colors.html
@@ -12,10 +12,14 @@
 
     <p><b>Instructions:</b> 
         This tool generates a random set of colors and displays a selection of them that are
-        most distinguishable across multiple different types of color vision. Each column displays a color for several
-        types of color vision. To select your own colors, use the color selector in the top right of a column, and to 
-        keep a color despite regenerating the rest of the set, check the box at the top of a column to lock it. At the 
-        bottom of the page are a couple of simulated plots in the color set, as well as the RGB and HEX values.
+        most distinguishable across multiple different types of color vision. Because it is randomly generating each set, 
+        some color sets will include colors that are not as distinguishable, so please choose colors at your own discretion. 
+        Each column displays a color including the simulated view for several
+        types of color vision; if you don't want to include a certain type of color vision in the calculation of color distinguisability
+        you can uncheck that box. To select your own colors, use the color selector in the top right of a column, and to 
+        keep a color despite regenerating the rest of the set, check the box at the top of a column to lock it. 
+        
+        At the bottom of the page are a couple of simulated plots in the color set, as well as the RGB and HEX values.
         <br/>
         some potential punny things: RGBetter (lame but catchy), huemongus; 
         provide a "simulated plot" option like the one
@@ -69,6 +73,12 @@
     <div class="testing"></div>
     <div class="break"></div>
     <div id="target"></div>
+
+    <p><b>More information about colorblindness</b>
+        Red, Green, Blue-blind; commonness, 100% vs partial. 
+        specific resources on colorblindness and also generating colors. 
+        export colors above this and example displays
+    </p>
 
     <script src="assets/js/colors.js"></script>
 </body>
