--- a/colors.html
+++ b/colors.html
@@ -66,14 +66,13 @@
     <div class="export">
         <h2>Export color values</h2>
         <form id="export_form">
-            <p>Please select your favorite Web language:</p>
                 <input type="radio" id="rgb" name="export_values" value="rgb" checked>
-                <label for="rgb">RGB</label><br>
+                <label>RGB</label>
                 <input type="radio" id="hsl" name="export_values" value="hsl">
-                <label for="hsl">HSL</label><br>
+                <label>HSL</label>
                 <input type="radio" id="hex" name="export_values" value="hex">
-                <label for="hex">Hex</label>
-                <button type="button" onclick="exportVals()">Submit</button>
+                <label>Hex</label>
+                <button type="button" onclick="exportVals()">Update</button>
         </form>
         <p id="export_text"></p>
     </div>
