--- a/colors.html
+++ b/colors.html
@@ -66,11 +66,11 @@
     <div class="export">
         <h2>Export color values</h2>
         <form id="export_form">
-                <input type="radio" id="rgb" name="export_values" value="rgb" checked>
+                <input type="radio" id="rgb" class="export_values" value="rgb" checked>
                 <label>RGB</label>
-                <input type="radio" id="hsl" name="export_values" value="hsl">
+                <input type="radio" id="hsl" class="export_values" value="hsl">
                 <label>HSL</label>
-                <input type="radio" id="hex" name="export_values" value="hex">
+                <input type="radio" id="hex" class="export_values" value="hex">
                 <label>Hex</label>
                 <button type="button" onclick="exportVals()">Update</button>
         </form>
