--- a/colors.html
+++ b/colors.html
@@ -76,6 +76,7 @@
         </form>
         <p id="export_text"></p>
     </div>
+    <div class="break"></div>
 
     <p><b>More information about colorblindness: </b> <br/>
         <a href="http://mkweb.bcgsc.ca/colorblind/index.mhtml">Understanding color vision and example color palettes</a> <br />
