--- a/colors.html
+++ b/colors.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Colors</title>
+    <title>Chameleon</title>
     <link rel="stylesheet" href="assets/css/colors.css">
     <link rel="icon" href="media/chameleon.png">
 </head>
