--- a/colors.html
+++ b/colors.html
@@ -78,7 +78,7 @@
 
     <div class="break"></div>
 
-    <p><b>More information about colorblindness: </b> <br/>
+    <p id="info"><b>More information about colorblindness: </b> <br/>
         <a href="http://mkweb.bcgsc.ca/colorblind/index.mhtml">Understanding color vision and example color palettes</a> <br />
         <a href="https://www.datylon.com/blog/data-visualization-for-colorblind-readers">More on design for colorblindness</a>
     </p>
