--- a/colors.html
+++ b/colors.html
@@ -72,7 +72,7 @@
                 <label>RGB</label>
                 <input type="radio" id="hex" class="export_values" name="export_values" value="hex">
                 <label>Hex</label>
-                <button type="button" onclick="exportVals()">Update</button>
+                <button id="update_export" type="button" onclick="exportVals()">Update</button>
         </form>
         <p id="export_text"></p>
 
