--- a/colors.html
+++ b/colors.html
@@ -25,6 +25,15 @@
         lock a color into the set, check the box at the top left of the column. 
     </p>
 
+    <form id="mode">
+        <span>Mode: </span>
+            <input type="radio" id="rgb" class="mode" name="mode" value="random" checked>
+            <label>Random colors</label>
+            <input type="radio" id="hex" class="mode" name="mode" value="scale">
+            <label>Perceptually uniform scale</label>
+    </form>
+
+
     <form>
         <div class="form-column">
         <label class="c1">
