--- a/colors.html
+++ b/colors.html
@@ -26,11 +26,14 @@
     </p>
 
     <form id="mode">
-        <span>Mode: </span>
+        <label>
+            <h3>Mode: </h3>
             <input type="radio" id="rgb" class="mode" name="mode" value="random" checked>
-            <label>Random colors</label>
+            <span>Random colors</span>
             <input type="radio" id="hex" class="mode" name="mode" value="scale">
-            <label>Perceptually uniform scale</label>
+            <span>Perceptually uniform scale</span>
+
+        </label>
     </form>
 
 
