shorten sort for testing

--- a/colors.html
+++ b/colors.html
@@ -55,7 +55,7 @@
         <div class="form-column">
         <label class="c2">
             <input id='deut_check' type="checkbox" checked>
-            <span>Deuteranopia</span>
+            <span>Deuteranopia (most common)</span>
         </label>
         <label class="c2">
             <input id='prot_check' type="checkbox" checked>
@@ -92,7 +92,8 @@
 
     <p id="info"><b>More information about colorblindness: </b> <br/>
         <a href="http://mkweb.bcgsc.ca/colorblind/index.mhtml">Understanding color vision and example color palettes</a> <br />
-        <a href="https://www.datylon.com/blog/data-visualization-for-colorblind-readers">More on design for colorblindness</a>
+        <a href="https://www.datylon.com/blog/data-visualization-for-colorblind-readers">More on design for colorblindness</a> <br />
+        Inspiration and resources include: <a href="https://projects.susielu.com/viz-palette">Viz Palette</a>, <a href="https://www.inf.ufrgs.br/~oliveira/pubs_files/CVD_Simulation/CVD_Simulation.html">paper from Machado et al</a> on calculating colorblindness visualizations
     </p>
 
     <script src="assets/js/colors.js"></script>
