--- a/colors.html
+++ b/colors.html
@@ -93,7 +93,8 @@
     <p id="info"><b>More information about colorblindness: </b> <br/>
         <a href="http://mkweb.bcgsc.ca/colorblind/index.mhtml">Understanding color vision and example color palettes</a> <br />
         <a href="https://www.datylon.com/blog/data-visualization-for-colorblind-readers">More on design for colorblindness</a> <br />
-        Inspiration and resources include: <a href="https://projects.susielu.com/viz-palette">Viz Palette</a>, <a href="https://www.inf.ufrgs.br/~oliveira/pubs_files/CVD_Simulation/CVD_Simulation.html">paper from Machado et al</a> on calculating colorblindness visualizations
+        Inspiration and resources include: <a href="https://projects.susielu.com/viz-palette">Viz Palette</a>, <a href="https://www.inf.ufrgs.br/~oliveira/pubs_files/CVD_Simulation/CVD_Simulation.html">paper from Machado et al</a> on calculating colorblindness visualizations, 
+        <a href="https://github.com/antimatter15/rgb-lab">RGB-CIELAB color conversions</a>
     </p>
 
     <script src="assets/js/colors.js"></script>
