update tmpArr deal with last val

--- a/colors.html
+++ b/colors.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <img src="media/chameleon.png" style="width:2em; float:left">
     <h1 id="test">Chameleon: Colorblind-friendly color palette generator</h1>
 
     <p id="instruct"><b>Instructions:</b> 
