reduce number of candidates

--- a/colors.html
+++ b/colors.html
@@ -32,7 +32,7 @@
             <input type="radio" id="mode-random" class="mode" name="mode" value="random" checked>
             <span>Random colors</span>
             <input type="radio" id="mode-uniform" class="mode" name="mode" value="scale">
-            <span>Perceptually uniform scale (to be added)</span>
+            <span>Perceptually uniform scale</span>
 
         </label>
     </form>
