--- a/colors.html
+++ b/colors.html
@@ -29,9 +29,9 @@
     <form id="mode">
         <label>
             <h3>Mode: </h3>
-            <input type="radio" id="mode-random" class="mode" name="mode" value="random" checked>
+            <input type="radio" id="mode-random" class="mode" name="mode" value="random" onclick="defaultRandRange()" checked>
             <span>Random colors</span>
-            <input type="radio" id="mode-uniform" class="mode" name="mode" value="scale">
+            <input type="radio" id="mode-uniform" class="mode" name="mode" value="scale" onclick="defaultGradRange()">
             <span>Gradient</span>
 
         </label>
