--- a/colors.html
+++ b/colors.html
@@ -85,6 +85,8 @@
                 <label>RGB</label>
                 <input type="radio" id="hex" class="export_values" name="export_values" value="hex">
                 <label>Hex</label>
+                <input type="radio" id="hsl" class="export_values" name="export_values" value="hsl">
+                <label>HSL</label>
                 <button id="update_export" type="button" onclick="exportVals()">Update</button>
         </form>
         <p id="export_text"></p>
